WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217501
Fix for accessibility tests keyevents-posted-for-increment-actions.html and keyevents-for-increment-actions-with-node-removal.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=217501
Summary
Fix for accessibility tests keyevents-posted-for-increment-actions.html and k...
Andres Gonzalez
Reported
2020-10-08 17:51:10 PDT
Fix for accessibility tests keyevents-posted-for-increment-actions.html and keyevents-for-increment-actions-with-node-removal.html in isolated tree mode.
Attachments
Patch
(7.26 KB, patch)
2020-10-08 17:59 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-10-08 17:59:54 PDT
Created
attachment 410899
[details]
Patch
EWS
Comment 2
2020-10-09 04:42:27 PDT
Committed
r268254
: <
https://trac.webkit.org/changeset/268254
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410899
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-09 04:43:18 PDT
<
rdar://problem/70134901
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug