Fix for accessibility tests keyevents-posted-for-increment-actions.html and keyevents-for-increment-actions-with-node-removal.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=217501

Reviewed by Chris Fleizach.

Source/WebCore:

Implementation of AXIsolatedObject::increment/decrement.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::increment):
(WebCore::AXIsolatedObject::decrement):
* accessibility/isolatedtree/AXIsolatedObject.h:

LayoutTests:

* accessibility/keyevents-for-increment-actions-with-node-removal.html:
Removed extra <html> tag and minor spacing and reordering to make it
more consistent with other accessibility tests.
* accessibility/keyevents-posted-for-increment-actions.html:
Corrected number of expected key events from 4 to 8.
Same minor spacing and ordering changes.


Canonical link: https://commits.webkit.org/230287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268254 268f45cc-cd09-0410-ab3c-d52691b4dbfc